--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.conditionaldatabarpositiveformat.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.conditionaldatabarpositiveformat.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ConditionalDataBarPositiveFormat:class'
     summary: |-
-      <span data-ttu-id="a5ecf-101">代表数据栏的正一侧的条件格式 DataBar 格式。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-101">Represents a conditional format DataBar Format for the positive side of the data bar.</span></span>
+      代表数据栏的正一侧的条件格式 DataBar 格式。
 
-      <span data-ttu-id="a5ecf-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a5ecf-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ConditionalDataBarPositiveFormat
     fullName: Excel.ConditionalDataBarPositiveFormat
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ConditionalDataBarPositiveFormat#borderColor:member'
@@ -26,9 +26,9 @@ items:
       - 'excel!Excel.ConditionalDataBarPositiveFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ConditionalDataBarPositiveFormat#borderColor:member'
     summary: |-
-      <span data-ttu-id="a5ecf-103">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-103">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="a5ecf-104">"" （空字符串）如果没有边框存在或未设置。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-104">"" (empty string) if no border is present or set.</span></span>
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。 "" （空字符串）如果没有边框存在或未设置。
 
-      <span data-ttu-id="a5ecf-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a5ecf-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borderColor
     fullName: borderColor
     langs:
@@ -40,7 +40,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.ConditionalDataBarPositiveFormat#context:member'
-    summary: <span data-ttu-id="a5ecf-106">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-106">The request context associated with the object.</span></span> <span data-ttu-id="a5ecf-107">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-107">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -53,9 +53,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ConditionalDataBarPositiveFormat#fillColor:member'
     summary: |-
-      <span data-ttu-id="a5ecf-108">代表\#RRGGBB 的填充颜色的 HTML 颜色代码（例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-108">HTML color code representing the fill color, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      代表表单\#RRGGBB 的填充颜色的 HTML 颜色代码（例如，"FFA500"）或命名的 HTML 颜色（例如，"橙色"）。
 
-      <span data-ttu-id="a5ecf-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a5ecf-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fillColor
     fullName: fillColor
     langs:
@@ -68,9 +68,9 @@ items:
           - string
   - uid: 'excel!Excel.ConditionalDataBarPositiveFormat#gradientFill:member'
     summary: |-
-      <span data-ttu-id="a5ecf-110">该布尔值表示 DataBar 是否具有渐变。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-110">Boolean representation of whether or not the DataBar has a gradient.</span></span>
+      指定 DataBar 是否具有渐变。
 
-      <span data-ttu-id="a5ecf-111">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a5ecf-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientFill
     fullName: gradientFill
     langs:
@@ -82,7 +82,7 @@ items:
         type:
           - boolean
   - uid: 'excel!Excel.ConditionalDataBarPositiveFormat#load:member(1)'
-    summary: <span data-ttu-id="a5ecf-112">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-112">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a5ecf-113">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-113">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -96,11 +96,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="a5ecf-114">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-114">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ConditionalDataBarPositiveFormatLoadOptions:interface'
   - uid: 'excel!Excel.ConditionalDataBarPositiveFormat#load:member(2)'
-    summary: <span data-ttu-id="a5ecf-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a5ecf-116">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-116">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -114,11 +114,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="a5ecf-117">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-117">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ConditionalDataBarPositiveFormat#load:member(3)'
-    summary: <span data-ttu-id="a5ecf-118">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-118">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a5ecf-119">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-119">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -136,7 +136,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="a5ecf-120">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-120">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -144,9 +144,9 @@ items:
                           expand?: string;
                       }
   - uid: 'excel!Excel.ConditionalDataBarPositiveFormat#set:member(1)'
-    summary: '<span data-ttu-id="a5ecf-121">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-121">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="a5ecf-122">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-122">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="a5ecf-123">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="a5ecf-123">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ConditionalDataBarPositiveFormat): void`
     name: 'set(properties, options)'
@@ -162,15 +162,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="a5ecf-124">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-124">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="a5ecf-125">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-125">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ConditionalDataBarPositiveFormat#set:member(2)'
-    summary: '<span data-ttu-id="a5ecf-126">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-126">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -188,7 +188,7 @@ items:
           type:
             - 'excel!Excel.ConditionalDataBarPositiveFormat:class'
   - uid: 'excel!Excel.ConditionalDataBarPositiveFormat#toJSON:member(1)'
-    summary: '<span data-ttu-id="a5ecf-127">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="a5ecf-127">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="a5ecf-128">.</span><span class="sxs-lookup"><span data-stu-id="a5ecf-128"></span></span> <span data-ttu-id="a5ecf-129">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="a5ecf-129"></span></span><!-- --><span data-ttu-id="a5ecf-130">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ConditionalDataBarPositiveFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ConditionalDataBarPositiveFormatData`</span><span class="sxs-lookup"><span data-stu-id="a5ecf-130">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ConditionalDataBarPositiveFormat object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ConditionalDataBarPositiveFormatData`</span></span><!-- --><span data-ttu-id="a5ecf-131">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="a5ecf-131">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ConditionalDataBarPositiveFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ConditionalDataBarPositiveFormatData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -201,7 +201,7 @@ items:
           - 'excel!Excel.Interfaces.ConditionalDataBarPositiveFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -211,7 +211,7 @@ references:
     name: Excel.Interfaces.ConditionalDataBarPositiveFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData:interface'
     name: Interfaces.ConditionalDataBarPositiveFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarPositiveFormatData:interface'
     name: Excel.Interfaces.ConditionalDataBarPositiveFormatData
